--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "next": "15.4.4",
+    "pnpm": "^10.13.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
