--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "canvas": "^2.11.2",
+    "gsap": "^3.13.0",
     "next": "15.4.4",
+    "pdfjs-dist": "^4.0.379",
     "pnpm": "^10.13.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-pdf": "^7.7.1",
-    "canvas": "^2.11.2",
-    "pdfjs-dist": "^4.0.379"
+    "react-pdf": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
