--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "canvas": "^2.11.2",
     "gsap": "^3.13.0",
     "next": "15.4.4",
+    "next-auth": "^4.24.11",
     "pdfjs-dist": "^4.0.379",
     "pnpm": "^10.13.1",
     "react": "19.1.0",
